fix chart alignment in flex

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,27 +26,24 @@ html {
 
 .Content {
   position: absolute;
-  width: 100%;
-  height: 100%;
 }
 
 .ContentPanel {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
   position: absolute;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
   box-sizing: border-box;
   background-color: rgb(255,255,255);
   border-radius: 4px;
   border: 1px solid rgb(236,236,236);
-  min-width: 20%;
 }
 
 .ContentPanel__Header {
   border-bottom: 1px solid rgb(247, 247, 247);
   background-color: rgb(236,236,236);
-  margin-bottom: 2%;
   padding: 4px 8px;
 }
 
